devops/kubernetes/centos7/dotcms/kube/10-hazelcast-mancenter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: hazelcast-mancenter
  name: hazelcast-mancenter
  namespace: dotcms
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: hazelcast-mancenter
status:
  loadBalancer: {}
