devops/kubernetes/centos7/dotcms/kube/13-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: http
  name: http
  namespace: dotcms
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "443"
    port: 443
    targetPort: 443
  selector:
    io.kompose.service: http
status:
  loadBalancer: {}
